examples/documentation_outputs/reactor_examples_output.txt
# Output from reactor_examples.py
# Generated on: 2025-07-06 13:42:18
# Exit code: 0

## STDOUT:
SPROCLIB Reactor Examples
==================================================
=== Simple Reactor Examples ===

--- Continuous Stirred Tank Reactor (CSTR) ---
CSTR created: Basic CSTR
Type: CSTR

Reactor specifications:
Volume: 2.0 m³
Flow rate: 0.5 m³/h
Residence time: 4.0 hours
Inlet concentration: 2.0 mol/L
Error running examples: 'charmap' codec can't encode character '\u207b' in position 20: character maps to <undefined>

## STDERR:
Traceback (most recent call last):
  File "C:\htdocs\github\paramus-experiments\paramus-experiments\paramus\chemistry\process_control\examples\reactor_examples.py", line 353, in main
    simple_reactor_examples()
    ~~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\htdocs\github\paramus-experiments\paramus-experiments\paramus\chemistry\process_control\examples\reactor_examples.py", line 55, in simple_reactor_examples
    print(f"Rate constant: {reaction_rate_constant} h\u207b¹")
    ~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Python313\Lib\encodings\cp1252.py", line 19, in encode
    return codecs.charmap_encode(input,self.errors,encoding_table)[0]
           ~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
UnicodeEncodeError: 'charmap' codec can't encode character '\u207b' in position 20: character maps to <undefined>
